tests/ui/type-alias-impl-trait/issue-84660-unsoundness.next.stderr
error[E0119]: conflicting implementations of trait `Trait<Bar, _>`
  --> $DIR/issue-84660-unsoundness.rs:29:1
   |
LL | impl<In, Out> Trait<Bar, In> for Out {
   | ------------------------------------ first implementation here
...
LL | impl<In, Out> Trait<(), In> for Out {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation

error[E0284]: type annotations needed: cannot satisfy `Bar == _`
  --> $DIR/issue-84660-unsoundness.rs:22:37
   |
LL |       fn convert(_i: In) -> Self::Out {
   |  _____________________________________^
LL | |
LL | |
LL | |         unreachable!();
LL | |     }
   | |_____^ cannot satisfy `Bar == _`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0119, E0284.
For more information about an error, try `rustc --explain E0119`.
